# other

./: .gitconfig  .gitignore  .vimrc  2017.05 SRK w1.0.doc  README.md  a.cpp  a.html  analiza.py  bookmarks_2_7_20.html  bookmarks_work.html  bridge.tex  currency_downloader.py  hi  resume.doc  som.py  som.tex  som2.py  vimrc  words
ansible/: README.md  add.yml  neovim.yml
ansible/host_vars/: docker.yml
ansible/inventory/: cos
apka/: apka.tex
bomb/: bomb.py  words
coding/: a.out  dfs.cpp  in  super_recursion.py
config/: user.token
config/keymaps/: Default for GNOME copy.xml
config/options/: KeyPromoterXStatistic.xml  dimensions.xml  jdk.table.xml  other.xml  recentProjects.xml  runner.layout.xml  updates.xml  usage.statistics.xml  vim_settings.xml  window.manager.xml  window.state.xml
config/options$/: vim_local_settings.xml
config/plugins/: availables.xml.etag  extensions.xml
curl/bad/: inv_srn  invalid
curl/collection/: ccdata  cdata  create_data  hgcol  list  updata  urls  wcr
curl/qumulo/: c  data  data2  data3  delete  describe  tmp  token  urls
cv/: cv.tex
dots/: .bashrc  .fzf.bash  .gitconfig  .gitconfig-i0  .gitconfig-osdu  .profile  .vimrc
dots/.pylint.d/: .pdbrc1.stats  __init__1.stats  a1.stats  app.__init__1.stats  app.routes1.stats  b1.stats  (+498 more)
flat/: example  finder.py  processed_urls  som.txt  xidel
funny/: yt
gabi/: dlug  listy
latex/: pmat5.tex~  projects.aux  projects.tex  trol.tex  trol.tex~  zlo_1_1.tex
new_comp/: .bashrc  .ideavimrc  .profile  autojump.txt  steps  vimrc
playground/: som.py  test.sql  test2.sql
playground/python/3rd/setuptools/mono/common/: pyproject.toml  setup_back.py
playground/python/3rd/setuptools/mono/common/src/kosciej_package.egg-info/: PKG-INFO  SOURCES.txt
playground/python/3rd/setuptools/mono/common/src/pack/: my_cls.py
playground/python/3rd/setuptools/mono/other2/: pyproject.toml
playground/python/3rd/uv/coms/: pyproject.toml
playground/vim/lsp_python/app/app1/: pyproject.toml
playground/vim/lsp_python/app/app1/src/app1/: klasa.py  main.py
pliki/: test.json
spotkanka/: system.tex  system_mini.tex
tmp/: plan.tex  s.tex
vim/: .netrwhist
(+658 files in other folders)
