[project]
name = "commons"
version = "0.0.1"
dependencies = ["base58"]

[project.optional-dependencies]
g1 = ["pysha3"]
g2 = ["h11"]

[tool.ruff]
extend = "../../pyproject.toml"

# [build-system]
# requires = ["hatchling"]
# build-backend = "hatchling.build"
#
# [tool.hatch.build.targets.wheel]
# packages = ["src/commons"]
#
# [tool.ruff.lint]
# ignore = [
#     "D416"
# ]
#
