[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "other"
version = "0.1.0"
authors = [
    { name="Your Name", email="your.email@example.com" },
]
description = "A simple example package"
requires-python = ">=3.12"

[tool.hatch.build.targets.wheel]
packages = ["src/pack1", "src/pack2"]
